--- a/Lessons/P0341_SimpleSQLite/app/src/main/res/layout/activity_main.xml
+++ b/Lessons/P0341_SimpleSQLite/app/src/main/res/layout/activity_main.xml
@@ -66,9 +66,27 @@
             android:text="Clear">
         </Button>
     </LinearLayout>
+    <Button
+        android:id="@+id/btnTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Test">
+    </Button>
 
-    <TextView
-        android:id="@+id/logView"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/logView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
