--- a/_GPS/SpeedTracker/Application/src/main/res/layout/activity_file.xml
+++ b/_GPS/SpeedTracker/Application/src/main/res/layout/activity_file.xml
@@ -4,13 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".FileActivity">
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </ListView>
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="go_main"
-        android:text="Button" />
+        android:text="RUN" />
 
 </LinearLayout>
